# AuthMicroService

./: CMakeLists.txt  config.json  main.cpp
api/: AuthControllerImpl.h  IAuthController.h
models/: AddressEntity.cpp  AddressEntity.h  Enums.h  PhoneNumber.cpp  PhoneNumberEntity.h  TokenDTO.h  UserCredentialsEntity.cpp  UserCredentialsEntity.h  UserEntity.h
repositories/: AuthRepositoryImpl.cpp  AuthRepositoryImpl.h  DBConfigRepository.cpp  DBConfigRepository.h  IAuthRepository.h
services/: AuthAPIServiceImpl.cpp  IAuthAPIService.h
utilies/: setErrorResponse.h
